--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "element-ui": "^2.13.1",
     "portal-vue": "^2.1.7",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
@@ -18,6 +19,10 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "babel-plugin-component": "^1.1.1",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
